--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     ></script>
     <link rel="stylesheet" href="src/styles.css" />
     <title>Document</title>
+    <div class="d-flex bg-warning">
+      <h1>Hello World</h1>
+    </div>
   </head>
   <body></body>
 </html>
