--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="d-flex bg-warning">
       <h1>Hello World</h1>
       <p>Hi there</p>
+      <i class="fab fa-instagram"></i>
     </div>
   </head>
   <body></body>
