--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/5a128b3c17.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="d-flex bg-warning">
       <h1>Hello World</h1>
       <p>Hi there</p>
+      <i class="fab fa-instagram"></i>
     </div>
   </body>
 </html>
