--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
     ></script>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello World</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram"></i>
-    </div>
+    <p>👋🏾 Hi, I am</p>
+    <h1>Nomcebo Mthembu</h1>
+    <h2>Front-end developer, based in South Africa</h2>
+    <a href="#">Contact me</a>
   </body>
 </html>
