Added a href class

--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     <p>👋🏾 Hi, I am</p>
     <h1>Nomcebo Mthembu</h1>
     <h2>Front-end developer, based in South Africa</h2>
-    <a href="#">Contact me</a>
+    <a href="#" class="btn btn-primary">Contact me</a>
   </body>
 </html>
