Added div class hero

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
     ></script>
   </head>
   <body>
-    <p>👋🏾 Hi, I am</p>
-    <h1>Nomcebo Mthembu</h1>
-    <h2>Front-end developer, based in South Africa</h2>
-    <a href="#" class="btn btn-primary">Contact me</a>
+    <div class="hero">
+      <p>👋🏾 Hi, I am</p>
+      <h1>Nomcebo Mthembu</h1>
+      <h2>Front-end developer, based in South Africa</h2>
+      <a href="#" class="btn btn-primary">Contact me</a>
+    </div>
   </body>
 </html>
