Changed btn btn-primary to btn btn-branding

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p>👋🏾 Hi, I am</p>
       <h1>Nomcebo Mthembu</h1>
       <h2>Front-end developer, based in South Africa</h2>
-      <a href="#" class="btn btn-primary">Contact me</a>
+      <a href="#" class="btn btn-branding">Contact me</a>
     </div>
   </body>
 </html>
