--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <div class="hero">
       <p>👋🏾 Hi, I am</p>
       <h1>Nomcebo Mthembu</h1>
-      <h2 class="mb-5">Front-end developer, based in South Africa</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <h2 class="mb-3">Front-end developer, based in South Africa</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
     </div>
   </body>
 </html>
