--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <p>Featured Project with my best projects be choice to show</p>
   </body>
 </html>
