--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
-    <p>Featured Project with my best projects be choice to show</p>
+    <p class="text-center m-5">
+      Featured Project with my best projects be choice to show
+    </p>
     <h2>Yogurt Project</h2>
     <p>
       Far far away, behind the word mountains, far from the countries Vokalia
