Added yoghurt image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     </p>
     <div class="container">
       <div class="row">
-        <div class="col-6"></div>
+        <div class="col-6">
+          <img src="images/Yoghurt.png" class="img-fluid" alt="" />
+        </div>
         <div class="col-6">
           <h2 class="mb-5">Yogurt Project</h2>
           <p class="mb-5 text-muted">
