--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </p>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col d-none d-lg-block">
           <img src="images/Yoghurt.png" class="img-fluid" alt="" />
         </div>
-        <div class="col-6">
+        <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-muted">
