Changed the names of the png images in the img src and h2 class

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/Yoghurt.png" class="img-fluid" alt="" />
+          <img src="images/Weather.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -77,11 +77,11 @@
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/Yoghurt.png" class="img-fluid" alt="" />
+          <img src="images/Dictionary.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Dictionary App</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
