--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       Featured Project with my best projects be choice to show
     </p>
     <div class="container">
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img src="images/Yoghurt.png" class="img-fluid" alt="" />
         </div>
@@ -58,10 +58,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col d-none d-lg-block">
-          <img src="images/Weather.png" class="img-fluid" alt="" />
-        </div>
+      <div class="row mb-5">
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
@@ -74,8 +71,11 @@
             <a href="#" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/Weather.png" class="img-fluid" alt="" />
+        </div>
       </div>
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img src="images/Dictionary.png" class="img-fluid" alt="" />
         </div>
