--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SheCodes About Page</title>
-
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +16,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -28,5 +26,15 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Hi I am Patricia Pereira</h1>
+    <h2>Frontend Developer, based in Portugal.</h2>
+    <p>
+      For anyone who wants to start learning code, this workshop is very
+      interesting. You will be challenged with different exercises, and
+      everything is well explained, homework and deadlines are good for keep
+      focus
+    </p>
+    <a href="">See my projects</a>
+  </body>
 </html>
