--- a/about.html
+++ b/about.html
@@ -27,15 +27,23 @@
     ></script>
   </head>
   <body>
-    <h1>Hi I am Patricia Pereira</h1>
-    <h2>Frontend Developer, based in Portugal.</h2>
-    <p>
-      For anyone who wants to start learning code, this workshop is very
-      interesting. You will be challenged with different exercises, and
-      everything is well explained, homework and deadlines are good for keep
-      focus
-    </p>
-    <a href="">See my projects</a>
-    <img src="images/patricia.png" alt="" />
+    <div class="about-section container">
+      <div class="row">
+        <div class="col-6">
+          <h1>Hi I am Patricia Pereira</h1>
+          <h2>Frontend Developer, based in Portugal.</h2>
+          <p>
+            For anyone who wants to start learning code, this workshop is very
+            interesting. You will be challenged with different exercises, and
+            everything is well explained, homework and deadlines are good for
+            keep focus
+          </p>
+          <a href="">See my projects</a>
+        </div>
+        <div class="col-6">
+          <img src="images/patricia.png" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
