--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
           <a href="">See my projects</a>
         </div>
         <div class="col-6">
-          <img src="images/patricia.png" alt="" />
+          <img src="images/patricia.png" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
