--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
     <div class="about-section container">
       <div class="row">
         <div class="col-6">
-          <h1>Hi I am Patricia Pereira</h1>
-          <h2>Frontend Developer, based in Portugal.</h2>
+          <h1 class="mb-5">Hi I am Patricia Pereira</h1>
+          <h2 class="mb-5">Frontend Developer, based in Portugal.</h2>
           <p>
             For anyone who wants to start learning code, this workshop is very
             interesting. You will be challenged with different exercises, and
