--- a/about.html
+++ b/about.html
@@ -29,11 +29,11 @@
   <body>
     <div class="about-section container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-md-6">
           <div class="about-section-content">
             <h1 class="mb-4">Hi I am Patricia Pereira</h1>
             <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
-            <p class="mb-4">
+            <p class="mb-5">
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
               everything is well explained, homework and deadlines are good for
@@ -42,7 +42,7 @@
             <a href="#" class="btn btn-branding">See my projects</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6">
           <img src="images/patricia.png" alt="" class="img-fluid" />
         </div>
       </div>
