--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             <a href="#" class="btn btn-branding">See my projects</a>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <img src="images/patricia.png" alt="" class="img-fluid" />
         </div>
       </div>
