--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="about-section-content">
-            <h1 class="mb-4">Hi I am Patricia Pereira</h1>
-            <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
+            <h1 class="mb-4">Hi I am Nomcebo Mthembu</h1>
+            <h2 class="mb-4">Frontend Developer, based in South Africa.</h2>
             <p class="mb-5">
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/patricia.png" alt="" class="img-fluid" />
+          <img src="images/Noma.jpg" alt="" class="img-fluid" />
         </div>
       </div>
     </div>
