--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <div class="col-md-6">
           <div class="about-section-content">
             <h1 class="mb-4">Hi I am Nomcebo Mthembu</h1>
-            <h2 class="mb-4">Frontend Developer, based in South Africa.</h2>
+            <h2 class="mb-4">Front-end Developer, based in South Africa.</h2>
             <p class="mb-5">
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
