--- a/work.html
+++ b/work.html
@@ -27,8 +27,8 @@
     ></script>
   </head>
   <body>
-    <div class="about-section container">
-      <div class="about-section-content">
+    <div class="content-container container">
+      <div class="content">
         <h1 class="mb-4">Hi I am Nomcebo Mthembu</h1>
       </div>
     </div>
