--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
     ></script>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-md-6">
-          <div class="about-section-content">
+          <div class="content">
             <h1 class="mb-4">Hi I am Nomcebo Mthembu</h1>
             <h2 class="mb-4">Front-end Developer, based in South Africa.</h2>
             <p class="mb-5">
