--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
   <body>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-4">Hi I am Nomcebo Mthembu</h1>
+        <h1 class="mb-4">Take a look at what I've been working on!</h1>
       </div>
     </div>
   </body>
