--- a/work.html
+++ b/work.html
@@ -30,6 +30,14 @@
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-4">Take a look at what I've been working on!</h1>
+
+        <div class="row">
+          <div class="col-6">
+            <img src="images/Yoghurt.png" class="img-fluid" alt="" />
+            <h3>Yogurt Project</h3>
+            <p>Built with HTML and CSS</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
