--- a/work.html
+++ b/work.html
@@ -34,8 +34,8 @@
         <div class="row">
           <div class="col-6">
             <img src="images/Yoghurt.png" class="img-fluid" alt="" />
-            <h3>Yogurt Project</h3>
-            <p>Built with HTML and CSS</p>
+            <h3 class="text-center">Yogurt Project</h3>
+            <p class="text-center">Built with HTML and CSS</p>
           </div>
         </div>
       </div>
