Added text-muted for p class

--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
           <div class="col-6">
             <img src="images/Yoghurt.png" class="img-fluid" alt="" />
             <h3 class="text-center">Yogurt Project</h3>
-            <p class="text-center">Built with HTML and CSS</p>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
         </div>
       </div>
