--- a/work.html
+++ b/work.html
@@ -33,8 +33,8 @@
 
         <div class="row">
           <div class="col-6">
-            <img src="images/Yoghurt.png" class="img-fluid" alt="" />
-            <h3 class="text-center">Yogurt Project</h3>
+            <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
         </div>
