--- a/work.html
+++ b/work.html
@@ -37,6 +37,21 @@
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
+          <div class="col-6">
+            <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Yogurt Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-6">
+            <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Yogurt Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
+          <div class="col-6">
+            <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Yogurt Project</h3>
+            <p class="text-center text-muted">Built with HTML and CSS</p>
+          </div>
         </div>
       </div>
     </div>
