--- a/work.html
+++ b/work.html
@@ -38,18 +38,18 @@
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-6">
-            <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Yogurt Project</h3>
+            <img src="images/Weather.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-6">
-            <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Yogurt Project</h3>
+            <img src="images/Dictionary.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Dictionary</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-6">
-            <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Yogurt Project</h3>
+            <img src="images/Translation.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Translation</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
         </div>
