--- a/work.html
+++ b/work.html
@@ -40,7 +40,9 @@
           <div class="col-6">
             <img src="images/Weather.png" class="img-fluid mb-3" alt="" />
             <h3 class="text-center m-0">Weather App</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <p class="text-center text-muted">
+              Built with HTML, CSS and Javascript
+            </p>
           </div>
           <div class="col-6">
             <img src="images/Dictionary.png" class="img-fluid mb-3" alt="" />
