--- a/work.html
+++ b/work.html
@@ -32,24 +32,24 @@
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
 
         <div class="row">
-          <div class="col-6">
+          <div class="col-md-6 mb-4">
             <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-          <div class="col-6">
+          <div class="col-md-6 mb-4">
             <img src="images/Weather.png" class="img-fluid mb-3" alt="" />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS and Javascript
             </p>
           </div>
-          <div class="col-6">
+          <div class="col-md-6 mb-4">
             <img src="images/Dictionary.png" class="img-fluid mb-3" alt="" />
             <h3 class="text-center m-0">Dictionary</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
-          <div class="col-6">
+          <div class="col-md-6 mb-4">
             <img src="images/Translation.png" class="img-fluid mb-3" alt="" />
             <h3 class="text-center m-0">Translation</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
