--- a/work.html
+++ b/work.html
@@ -46,13 +46,17 @@
           </div>
           <div class="col-md-6 mb-4">
             <img src="images/Dictionary.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Dictionary</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h3 class="text-center m-0">Dictionary App</h3>
+            <p class="text-center text-muted">
+              Built with HTML and CSS with React
+            </p>
           </div>
           <div class="col-md-6 mb-4">
             <img src="images/Translation.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Translation</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <h3 class="text-center m-0">Translation App</h3>
+            <p class="text-center text-muted">
+              Built with HTML and CSS with React
+            </p>
           </div>
         </div>
       </div>
