--- a/work.html
+++ b/work.html
@@ -33,26 +33,42 @@
 
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/Yoghurt.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/Yoghurt.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/Weather.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/Weather.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
               Built with HTML, CSS and Javascript
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/Dictionary.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/Dictionary.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
             <h3 class="text-center m-0">Dictionary App</h3>
             <p class="text-center text-muted">
               Built with HTML and CSS with React
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/Translation.png" class="img-fluid mb-3" alt="" />
+            <img
+              src="images/Translation.png"
+              class="img-fluid mb-3 rounded"
+              alt=""
+            />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">
               Built with HTML and CSS with React
