Changed title and added div classes

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>SheCodes Contact Page</title>
   </head>
-  <body></body>
+  <body>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+      </div>
+    </div>
+  </body>
 </html>
