--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
   <body>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <h1 class="mb-5">Let's get in touch!</h1>
       </div>
     </div>
   </body>
