--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,12 @@
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
+        <h3>Email</h3>
+        <p>nomcebom40@gmail.com</p>
+        <h3>TikTok</h3>
+        <p>@thecoderhub</p>
+        <h3>Instagram</h3>
+        <p>@thecoderhub</p>
       </div>
     </div>
   </body>
