Added links for email and tiktok

--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,15 @@
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
-        <p>nomcebom40@gmail.com</p>
+        <p>
+          <a href="mailto:nomcebom40@gmail.com"> nomcebom40@gmail.com</a>
+        </p>
         <h3>TikTok</h3>
-        <p>@thecoderhub</p>
+        <p>
+          <a href="https://www.tiktok.com/@thecoderhub" target="_blank">
+            @thecoderhub
+          </a>
+        </p>
         <h3>Instagram</h3>
         <p>@thecoderhub</p>
       </div>
