Added link for instagram

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,11 @@
           </a>
         </p>
         <h3>Instagram</h3>
-        <p>@thecoderhub</p>
+        <p>
+          <a href="https://www.instagram.com/@thecoderhub" target="_blank">
+            @thecoderhub
+          </a>
+        </p>
       </div>
     </div>
   </body>
