Added nav, ul and li in index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
     ></script>
   </head>
   <body>
+    <nav>
+      <img src="" alt="" />
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Work</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
     <div class="hero">
       <p>👋🏾 Hi, I am</p>
       <h1>Nomcebo Mthembu</h1>
