--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <nav>
-      <img src="images/logo.png" alt="" />
+      <img src="images/logo.png" class="logo" alt="" />
       <ul>
         <li>Home</li>
         <li>About</li>
