--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
   </head>
   <body>
     <nav>
-      <img src="images/logo.png" class="logo" alt="" />
-      <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Work</li>
-        <li>Contact</li>
-      </ul>
+      <div class="container">
+        <img src="images/logo.png" class="logo" alt="" />
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Work</li>
+          <li>Contact</li>
+        </ul>
+      </div>
     </nav>
     <div class="hero">
       <p>👋🏾 Hi, I am</p>
