--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     ></script>
   </head>
   <body>
-    <nav>
-      <div class="container">
+    <div class="container">
+      <nav class="d-flex justify-content-between">
         <img src="images/logo.png" class="logo" alt="" />
         <ul>
           <li>Home</li>
@@ -38,8 +38,8 @@
           <li>Work</li>
           <li>Contact</li>
         </ul>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <div class="hero">
       <p>👋🏾 Hi, I am</p>
       <h1>Nomcebo Mthembu</h1>
