--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav class="d-flex justify-content-between">
         <img src="images/logo.png" class="logo" alt="" />
         <ul>
-          <li>
+          <li class="active">
             <a href="/">Home</a>
           </li>
           <li>
