--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <img src="images/logo.png" class="logo" alt="" />
+        <img src="images/SheCodes Logo.png" class="logo" alt="" />
         <ul>
           <li class="active">
             <a href="/">Home</a>
