--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="images/logo.png" class="logo" alt="" />
-        <img src="images/SheCodes Logo.png" class="logo" alt="" />
+        <img src="images/logo.png" class="logo d-block d-md-none" alt="" />
+        <img
+          src="images/SheCodes Logo.png"
+          class="logo d-block d-md-none"
+          alt=""
+        />
         <ul>
           <li class="active">
             <a href="/">Home</a>
