--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="images/logo.png" class="logo d-block d-md-none" alt="" />
-        <img
-          src="images/SheCodes Logo.png"
-          class="logo d-block d-md-none"
-          alt=""
-        />
+        <a href="/">
+          <img src="images/logo.png" class="logo d-block d-md-none" alt="" />
+          <img
+            src="images/SheCodes Logo.png"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
         <ul>
           <li class="active">
             <a href="/">Home</a>
