--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/">
-          <img src="images/logo.png" class="logo d-block d-md-none" alt="" />
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
           <img
             src="images/SheCodes Logo.png"
             class="logo d-block d-md-none"
