Added a href for email link and social media icons

--- a/index.html
+++ b/index.html
@@ -118,6 +118,16 @@
           </div>
         </div>
       </div>
+      <footer>
+        <a href="mailto:nomcebom40@gmail.com" class="email-link"
+          >nomcebom40@gmail.com</a
+        >
+        <div class="social-links">
+          <a href=""> <i class="fa-brands fa-instagram"></i></a>
+          <a href=""> <i class="fa-brands fa-github"></i></a>
+          <a href=""> <i class="fa-brands fa-tiktok"></i></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
