Added div class around a href in footer

--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
         </div>
       </div>
       <footer>
-        <a href="mailto:nomcebom40@gmail.com" class="email-link"
-          >nomcebom40@gmail.com</a
-        >
-        <div class="social-links">
+        <div class="d-flex justify-content-center">
+          <a href="mailto:nomcebom40@gmail.com" class="email-link"
+            >nomcebom40@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
           <a href=""> <i class="fa-brands fa-instagram"></i></a>
           <a href=""> <i class="fa-brands fa-github"></i></a>
           <a href=""> <i class="fa-brands fa-tiktok"></i></a>
