--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
       </div>
       <footer>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center mb-5">
           <a href="mailto:nomcebom40@gmail.com" class="email-link"
             >nomcebom40@gmail.com</a
           >
