Added links to all the social media icons

--- a/index.html
+++ b/index.html
@@ -125,9 +125,15 @@
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href=""> <i class="fa-brands fa-instagram"></i></a>
-          <a href=""> <i class="fa-brands fa-github"></i></a>
-          <a href=""> <i class="fa-brands fa-tiktok"></i></a>
+          <a href="https://www.instagram.com/thecoderhub" target="_blank">
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.github.com/thecoderhub" target="_blank">
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.tiktok.com/thecoderhub" target="_blank">
+            <i class="fa-brands fa-tiktok"></i
+          ></a>
         </div>
       </footer>
     </div>
