--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@
         </div>
       </div>
       <footer>
+        <div class="contact-box">
+          <h4>Work Inquiry</h4>
+          <p>Let's work together</p>
+          <a href="" class="btn btn-branding">Contact me</a>
+        </div>
         <div class="d-flex justify-content-center mb-5">
           <a href="mailto:nomcebom40@gmail.com" class="email-link"
             >nomcebom40@gmail.com</a
