--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
       </div>
       <footer>
-        <div class="contact-box d-flex justify-content-between">
+        <div class="contact-box d-flex justify-content-between mb-5">
           <div>
             <h4>Work Inquiry</h4>
             <p>Let's work together</p>
