--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
         </div>
       </div>
       <footer>
-        <div class="contact-box d-flex justify-content-between mb-5">
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-block"
+        >
           <div>
             <h4>Work Inquiry</h4>
-            <p>Let's work together</p>
+            <p class="text-muted">Let's work together</p>
           </div>
           <div>
             <a href="" class="btn btn-branding">Contact me</a>
