--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Portfolio</title>
+    <meta
+      name="description"
+      content="Nomcebo is a front-end engineer based in South Africa."
+    />
+    <title>Front-end developer - Nomcebo Mthembu</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -32,11 +36,15 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Nomcebo Logo"
+          />
           <img
             src="images/SheCodes Logo.png"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Nomcebo Logo"
           />
         </a>
         <ul>
