--- a/about.html
+++ b/about.html
@@ -27,6 +27,36 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Nomcebo Logo"
+          />
+          <img
+            src="images/SheCodes Logo.png"
+            class="logo d-block d-md-none"
+            alt="Nomcebo Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About Nomcebo">About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="Nomcebo's work">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Nomcebo">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-md-6">
@@ -43,7 +73,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/Noma.jpg" alt="" class="img-fluid" />
+          <img src="images/Noma.jpg" alt="" class="img-fluid rounded" />
         </div>
       </div>
     </div>
