--- a/work.html
+++ b/work.html
@@ -27,6 +27,36 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo.png"
+            class="logo d-none d-md-block"
+            alt="Nomcebo Logo"
+          />
+          <img
+            src="images/SheCodes Logo.png"
+            class="logo d-block d-md-none"
+            alt="Nomcebo Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage">Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="About Nomcebo">About</a>
+          </li>
+          <li class="active">
+            <a href="/work.html" title="Nomcebo's work">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Nomcebo">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Take a look at what I've been working on!</h1>
