--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
       <h1>Nomcebo Mthembu</h1>
       <h2 class="mb-3">Front-end developer, based in South Africa</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact me"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">
@@ -77,7 +79,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Yoghurt.png" class="img-fluid" alt="" />
+          <img
+            src="images/Yoghurt.png"
+            class="img-fluid"
+            alt="Yogurt App Preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -88,7 +94,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
@@ -102,16 +110,26 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/Weather.png" class="img-fluid" alt="" />
+          <img
+            src="images/Weather.png"
+            class="img-fluid"
+            alt="Weather App preview"
+          />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="images/Dictionary.png"
+            class="img-fluid"
+            alt="Dictionary App preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -122,7 +140,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
           </div>
         </div>
       </div>
