--- a/index.html
+++ b/index.html
@@ -162,21 +162,45 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:nomcebom40@gmail.com" class="email-link"
+          <a
+            href="mailto:nomcebom40@gmail.com"
+            class="email-link"
+            title="Email Nomcebo"
             >nomcebom40@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/thecoderhub" target="_blank">
+          <a
+            href="https://www.instagram.com/thecoderhub"
+            target="_blank"
+            title="Instagram Profile"
+          >
             <i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.github.com/thecoderhub" target="_blank">
+          <a
+            href="https://www.github.com/thecoderhub"
+            target="_blank"
+            title="Github Profile"
+          >
             <i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.tiktok.com/thecoderhub" target="_blank">
+          <a
+            href="https://www.tiktok.com/thecoderhub"
+            target="_blank"
+            title="TikTok Profile"
+          >
             <i class="fa-brands fa-tiktok"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          ✌🏾 This project was coded by Nomcebo Mthembu, it is
+          <a
+            href="https://github.com/Nomcebo-coder-hub/portfolio-project"
+            target="_blank"
+          >
+            open-sourced
+          </a>
+        </p>
       </footer>
     </div>
   </body>
