--- a/about.html
+++ b/about.html
@@ -77,5 +77,61 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding mt-3"
+            title="Contact Nomcebo"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:nomcebom40@gmail.com"
+          class="email-link"
+          title="Email Nomcebo"
+          >nomcebom40@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.instagram.com/thecoderhub"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.github.com/thecoderhub"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.tiktok.com/thecoderhub"
+          target="_blank"
+          title="TikTok Profile"
+        >
+          <i class="fa-brands fa-tiktok"></i
+        ></a>
+      </div>
+      <p class="text-center mt-5">
+        ✌🏾 This project was coded by Nomcebo Mthembu, it is
+        <a
+          href="https://github.com/Nomcebo-coder-hub/portfolio-project"
+          target="_blank"
+        >
+          open-sourced
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
