Added container for all footers in each page

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer class="container">
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
         <div>
           <h3>Work Inquiry</h3>
