Added meta description and changed title

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact Nomcebo. Nomcebo is a front-end engineer based in South Africa."
+    />
+    <title>Contact Nomcebo - Nomcebo Mthembu</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +30,6 @@
       src="https://kit.fontawesome.com/5a128b3c17.js"
       crossorigin="anonymous"
     ></script>
-    <title>SheCodes Contact Page</title>
   </head>
   <body>
     <div class="container">
