Added alt names to images

--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@
             <img
               src="images/Weather.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Weather App preview"
             />
             <h3 class="text-center m-0">Weather App</h3>
             <p class="text-center text-muted">
@@ -86,7 +86,7 @@
             <img
               src="images/Dictionary.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Dictionary App preview"
             />
             <h3 class="text-center m-0">Dictionary App</h3>
             <p class="text-center text-muted">
@@ -97,7 +97,7 @@
             <img
               src="images/Translation.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Translation project preview"
             />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">
