--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes About Page</title>
+    <meta
+      name="description"
+      content="About Nomcebo. Nomcebo is a front-end engineer based in South Africa."
+    />
+    <title>About Nomcebo - Nomcebo Mthembu</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -69,11 +73,15 @@
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <a href="#" class="btn btn-branding">See my projects</a>
+            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/Noma.jpg" alt="" class="img-fluid rounded" />
+          <img
+            src="images/Noma.jpg"
+            alt="About Nomcebo"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
     </div>
