--- a/work.html
+++ b/work.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes Work Page</title>
+    <meta
+      name="description"
+      content="Nomcebo's work. Nomcebo is a front-end engineer based in South Africa."
+    />
+    <title>Nomcebo's work - Nomcebo Mthembu</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,13 +47,13 @@
         </a>
         <ul>
           <li>
-            <a href="/" title="Homepage">Home</a>
+            <a href="/index.html" title="Homepage">Home</a>
           </li>
           <li>
             <a href="/about.html" title="About Nomcebo">About</a>
           </li>
           <li class="active">
-            <a href="/work.html" title="Nomcebo's work">Work</a>
+            <a href="/" title="Nomcebo's work">Work</a>
           </li>
           <li>
             <a href="/contact.html" title="Contact Nomcebo">Contact</a>
@@ -66,7 +70,7 @@
             <img
               src="images/Yoghurt.png"
               class="img-fluid mb-3 rounded"
-              alt=""
+              alt="Yogurt App preview"
             />
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
