Changed a href for about.html and contact.html

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         </a>
         <ul>
           <li>
-            <a href="/" title="Homepage">Home</a>
+            <a href="/index.html" title="Homepage">Home</a>
           </li>
           <li>
             <a href="/about.html" title="About Nomcebo">About</a>
@@ -57,7 +57,7 @@
             <a href="/work.html" title="Nomcebo's work">Work</a>
           </li>
           <li class="active">
-            <a href="/contact.html" title="Contact Nomcebo">Contact</a>
+            <a href="/" title="Contact Nomcebo">Contact</a>
           </li>
         </ul>
       </nav>
