--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
         </a>
         <ul>
           <li>
-            <a href="/" title="Homepage">Home</a>
+            <a href="/index.html" title="Homepage">Home</a>
           </li>
           <li class="active">
-            <a href="/about.html" title="About Nomcebo">About</a>
+            <a href="/" title="About Nomcebo">About</a>
           </li>
           <li>
             <a href="/work.html" title="Nomcebo's work">Work</a>
