Changed yoghurt information to vanilla weather app information

--- a/work.html
+++ b/work.html
@@ -67,13 +67,17 @@
 
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img
-              src="images/Yoghurt.png"
-              class="img-fluid mb-3 rounded"
-              alt="Yogurt App preview"
-            />
-            <h3 class="text-center m-0">Yogurt Project</h3>
-            <p class="text-center text-muted">Built with HTML and CSS</p>
+            <a href="https://vanilla-weather-noma.netlify.app/" target="_blank">
+              <img
+                src="images/Weather App.png"
+                class="img-fluid mb-3 rounded"
+                alt="Weather App preview"
+              />
+            </a>
+            <h3 class="text-center m-0">Vanilla Weather App</h3>
+            <p class="text-center text-muted">
+              Built with HTML; CSS and JAVASCRIPT
+            </p>
           </div>
           <div class="col-md-6 mb-4">
             <img
