--- a/work.html
+++ b/work.html
@@ -81,14 +81,12 @@
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/Weather.png"
+              src="images/ToDo-List.png"
               class="img-fluid mb-3 rounded"
               alt="Weather App preview"
             />
-            <h3 class="text-center m-0">Weather App</h3>
-            <p class="text-center text-muted">
-              Built with HTML, CSS and Javascript
-            </p>
+            <h3 class="text-center m-0">To-do List</h3>
+            <p class="text-center text-muted">Built with REACT</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
