--- a/work.html
+++ b/work.html
@@ -80,11 +80,13 @@
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <img
-              src="images/ToDo-List.png"
-              class="img-fluid mb-3 rounded"
-              alt="Weather App preview"
-            />
+            <a href="https://todo-list-react-noma.netlify.app/" target="_blank">
+              <img
+                src="images/ToDo-List.png"
+                class="img-fluid mb-3 rounded"
+                alt="ToDo App preview"
+              />
+            </a>
             <h3 class="text-center m-0">To-do List</h3>
             <p class="text-center text-muted">Built with REACT</p>
           </div>
