Added new logo to portfolio

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
         </div>
         <div class="col-lg-6">
           <img
-            src="images/Noma.jpg"
+            src="images/cover-pic.jpg"
             alt="About Nomcebo"
             class="img-fluid rounded"
           />
