--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/letter-n-svgrepo-com.svg"
             class="logo d-none d-md-block"
             alt="Nomcebo Logo"
           />
           <img
-            src="images/SheCodes Logo.png"
-            class="logo d-block d-md-none"
+            src="images/letter-n-svgrepo-com.svg"
+            class="logo d-block d-md-none w-60"
             alt="Nomcebo Logo"
           />
         </a>
