Added paragraph in about section; changed titles of the projects  and added a different email

--- a/about.html
+++ b/about.html
@@ -35,12 +35,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/letter-n-svgrepo-com.svg"
             class="logo d-none d-md-block"
             alt="Nomcebo Logo"
           />
           <img
-            src="images/SheCodes Logo.png"
+            src="images/letter-n-svgrepo-com.svg"
             class="logo d-block d-md-none"
             alt="Nomcebo Logo"
           />
@@ -65,13 +65,25 @@
       <div class="row">
         <div class="col-md-6">
           <div class="content">
-            <h1 class="mb-4">Hi I am Nomcebo Mthembu</h1>
+            <h1 class="mb-4">Hi, I am Nomcebo Mthembu</h1>
             <h2 class="mb-4">Front-end Developer, based in South Africa.</h2>
             <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
+              I began learning how to code in August 2023, I applied into the
+              SheCodes Foundation where I was able to learn how to code for
+              free. I started with SheCodes Basics which taught me the basics of
+              Web development like HTML; CSS and JAVASCRIPT. I progressed to
+              SheCodes Plus which taught me more about JAVASCRIPT. After
+              graduating from SheCodes Plus; I studied Responsive Design through
+              SheCodes Responsive. I learned the Bootstrap 5 framework and out
+              of that course I created my portfolio website. I finished off my
+              SheCodes course with SheCodes React which taught me how to create
+              a Weather App through React. I thoroughly enjoyed the course
+              because after each lesson there was a mini assignment to complete
+              which further helped to solidify my understanding of the lesson. I
+              went on to complete the Power Learn Project Software Development
+              Programme. In this programme I learned courses in Web development;
+              Python; Dart with Flutter; Software Engineering; Database and
+              Entreprenuership and Personal Development.
             </p>
             <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
@@ -102,20 +114,13 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:nomcebom40@gmail.com"
+          href="mailto:nmthembu2797@gmail.com"
           class="email-link"
           title="Email Nomcebo"
-          >nomcebom40@gmail.com</a
+          >nmthembu2797@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a
-          href="https://www.instagram.com/thecoderhub"
-          target="_blank"
-          title="Instagram Profile"
-        >
-          <i class="fa-brands fa-instagram"></i
-        ></a>
         <a
           href="https://www.github.com/thecoderhub"
           target="_blank"
