--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/letter-n-svgrepo-com.svg"
             class="logo d-none d-md-block"
             alt="Nomcebo Logo"
           />
           <img
-            src="images/SheCodes Logo.png"
+            src="images/letter-n-svgrepo-com.svg"
             class="logo d-block d-md-none"
             alt="Nomcebo Logo"
           />
