--- a/index.html
+++ b/index.html
@@ -80,35 +80,32 @@
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="images/Yoghurt.png"
+            src="images/Weather App.png"
             class="img-fluid"
-            alt="Yogurt App Preview"
+            alt="Weather App Preview"
           />
         </div>
-        <div class="col">
-          <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline">
-              Learn more
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="row mb-5">
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              My weather app was built with HTML, CSS and JAVASCRIPT. I used the
+              API key and Url provided by SheCodes to get the live weather data.
+            </p>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn more
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">To-Do List App</h2>
+            <p class="mb-5 text-muted">
+              My To-Do list was built with React. The application records notes;
+              there is a checkbox per note which is scratched out when the
+              checkbox is ticked; and you are able to delete the notes.
             </p>
             <a href="/work.html" class="btn btn-branding-outline">
               Learn more
@@ -117,23 +114,23 @@
         </div>
         <div class="col d-none d-lg-block">
           <img
-            src="images/Weather.png"
+            src="images/ToDo-List.png"
             class="img-fluid"
-            alt="Weather App preview"
+            alt="To-Do List App preview"
           />
         </div>
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="images/Dictionary.png"
+            src="images/"
             class="img-fluid"
-            alt="Dictionary App preview"
+            alt="File Organiser App preview"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Dictionary App</h2>
+            <h2 class="mb-5">File organiser App</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -163,20 +160,13 @@
         </div>
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:nomcebom40@gmail.com"
+            href="mailto:nmthembu2797@gmail.com"
             class="email-link"
             title="Email Nomcebo"
-            >nomcebom40@gmail.com</a
+            >nmthembu2797@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a
-            href="https://www.instagram.com/thecoderhub"
-            target="_blank"
-            title="Instagram Profile"
-          >
-            <i class="fa-brands fa-instagram"></i
-          ></a>
           <a
             href="https://www.github.com/thecoderhub"
             target="_blank"
