--- a/work.html
+++ b/work.html
@@ -35,12 +35,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo.png"
+            src="images/letter-n-svgrepo-com.svg"
             class="logo d-none d-md-block"
             alt="Nomcebo Logo"
           />
           <img
-            src="images/SheCodes Logo.png"
+            src="images/letter-n-svgrepo-com.svg"
             class="logo d-block d-md-none"
             alt="Nomcebo Logo"
           />
@@ -132,20 +132,13 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:nomcebom40@gmail.com"
+          href="mailto:nmthembu2797@gmail.com"
           class="email-link"
           title="Email Nomcebo"
-          >nomcebom40@gmail.com</a
+          >nmthembu2797@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a
-          href="https://www.instagram.com/thecoderhub"
-          target="_blank"
-          title="Instagram Profile"
-        >
-          <i class="fa-brands fa-instagram"></i
-        ></a>
         <a
           href="https://www.github.com/thecoderhub"
           target="_blank"
