--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
-            src="images/"
+            src="images/File Organiser.png"
             class="img-fluid"
             alt="File Organiser App preview"
           />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">File organiser App</h2>
+            <h2 class="mb-5">File organiser</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
