--- a/work.html
+++ b/work.html
@@ -100,7 +100,7 @@
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/Dictionary.png"
+              src="images/File Organiser.png"
               class="img-fluid mb-3 rounded"
               alt="Dictionary App preview"
             />
@@ -115,7 +115,7 @@
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/File Organiser.png"
+              src="images/"
               class="img-fluid mb-3 rounded"
               alt="File Organiser project preview"
             />
