Added image, change colour of social links and added React project

--- a/work.html
+++ b/work.html
@@ -115,14 +115,18 @@
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/"
+              src="images/React Weather.png"
               class="img-fluid mb-3 rounded"
-              alt="File Organiser project preview"
+              alt="Weather App preview"
             />
-            <h3 class="text-center m-0">Translation App</h3>
-            <p class="text-center text-muted">
-              Built with HTML and CSS with React
-            </p>
+            <a
+              href="https://react-final-project-noma.netlify.app/"
+              target="_blank"
+              class="project-link"
+            >
+              <h3 class="text-center m-0">React Weather App</h3></a
+            >
+            <p class="text-center text-muted">Built with REACT</p>
           </div>
         </div>
       </div>
