--- a/work.html
+++ b/work.html
@@ -171,7 +171,7 @@
         ></a>
       </div>
       <p class="text-center mt-5">
-        ✌🏾 This project was coded by Nomcebo Mthembu, it is
+        This project was coded by Nomcebo Mthembu, it is
         <a
           href="https://github.com/Nomcebo-coder-hub/portfolio-project"
           target="_blank"
