Added achievements page into each section of the portfolio

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             <a href="/work.html" title="Nomcebo's work">Work</a>
           </li>
           <li>
+            <a href="/achievements.html" title="Nomcebo's achievements"
+              >Achievements</a
+            >
+          </li>
+          <li>
             <a href="/contact.html" title="Contact Nomcebo">Contact</a>
           </li>
         </ul>
