--- a/work.html
+++ b/work.html
@@ -56,6 +56,11 @@
             <a href="/" title="Nomcebo's work">Work</a>
           </li>
           <li>
+            <a href="/achievements.html" title="Nomcebo's achievements"
+              >Achievements</a
+            >
+          </li>
+          <li>
             <a href="/contact.html" title="Contact Nomcebo">Contact</a>
           </li>
         </ul>
