--- a/contact.html
+++ b/contact.html
@@ -56,6 +56,11 @@
           <li>
             <a href="/work.html" title="Nomcebo's work">Work</a>
           </li>
+          <li>
+            <a href="/achievements.html" title="Nomcebo's achievements"
+              >Achievements</a
+            >
+          </li>
           <li class="active">
             <a href="/" title="Contact Nomcebo">Contact</a>
           </li>
