Changed see projects to see achievements; updated styles.css  and added another achievement

--- a/about.html
+++ b/about.html
@@ -90,7 +90,9 @@
               Python; Dart with Flutter; Software Engineering; Database and
               Entreprenuership and Personal Development.
             </p>
-            <a href="/work.html" class="btn btn-branding">See my projects</a>
+            <a href="/achievements.html" class="btn btn-branding"
+              >See achievements</a
+            >
           </div>
         </div>
         <div class="col-lg-6">
