--- a/achievements.html
+++ b/achievements.html
@@ -66,70 +66,44 @@
     </div>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <h1 class="mb-5">Take a look at my achievements!</h1>
 
         <div class="row">
           <div class="col-md-6 mb-4">
             <img
-              src="images/Weather App.png"
+              src="images/SheReact.png"
               class="img-fluid mb-3 rounded"
-              alt="Weather App preview"
+              alt="SheCodes React preview"
             />
-            <a
-              href="https://vanilla-weather-noma.netlify.app/"
-              target="_blank"
-              class="project-link"
-            >
-              <h3 class="text-center m-0">Vanilla Weather App</h3></a
-            >
-            <p class="text-center text-muted">
-              Built with HTML; CSS and JAVASCRIPT
-            </p>
+            <h3 class="text-center m-0">SheCodes React</h3>
+            <p class="text-center text-muted">Completed: May 2024</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/ToDo-List.png"
+              src="images/SheResponsive.png"
               class="img-fluid mb-3 rounded"
-              alt="ToDo App preview"
+              alt="SheCodes Responsive preview"
             />
-            <a
-              href="https://todo-list-react-noma.netlify.app/"
-              target="_blank"
-              class="project-link"
-            >
-              <h3 class="text-center m-0">To-do List</h3></a
-            >
-            <p class="text-center text-muted">Built with REACT</p>
+            <h3 class="text-center m-0">SheCodes Responsive</h3>
+            <p class="text-center text-muted">Completed: February 2024</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/File Organiser.png"
+              src="images/ShePlus.png"
               class="img-fluid mb-3 rounded"
-              alt="Dictionary App preview"
+              alt="SheCodes Plus preview"
             />
-            <a
-              href="https://github.com/Nomcebo-coder-hub/file-organiser-python"
-              target="_blank"
-              class="project-link"
-            >
-              <h3 class="text-center m-0">File Organiser</h3></a
-            >
-            <p class="text-center text-muted">Built with PYTHON</p>
+            <h3 class="text-center m-0">SheCodes Plus</h3>
+            <p class="text-center text-muted">Completed: November 2023</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/React Weather.png"
+              src="images/SheBasics.png"
               class="img-fluid mb-3 rounded"
-              alt="Weather App preview"
+              alt="SheCodes Basics preview"
             />
-            <a
-              href="https://react-final-project-noma.netlify.app/"
-              target="_blank"
-              class="project-link"
-            >
-              <h3 class="text-center m-0">React Weather App</h3></a
-            >
-            <p class="text-center text-muted">Built with REACT</p>
+            <h3 class="text-center m-0">SheCodes Basics</h3>
+            <p class="text-center text-muted">Completed: August 2023</p>
           </div>
         </div>
       </div>
